--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -85,7 +85,7 @@
   
   .theme-switch__marker {
     position: relative;
-    background-color: #fff;
+    background-color: #ffffff;
     width: 26px;
     height: 26px;
     border-radius: 50%;
